Update deprecated functions. Clean up calls, and make it generall work with Java 11.